--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,7 @@
                         <ul class="list">
                             <li><a href="#main" onclick="$.afui.clearHistory()">Main Page</a></li>
                             <li><a href="#page2" onclick="$.afui.clearHistory()">Page Two</a></li>
+                            <li><a href="#page2" onclick="$.afui.clearHistory()">Page Three</a></li>
                         </ul>
                     </div>
                 </div>
