--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
         
         <header>
             <a class="menuButton" data-left-menu="left" data-transition="cover" style="float:left"></a>
-            <h1>Title</h1>
+            <h1>Title3</h1>
         </header>
         
         <div class="pages">
