:D läpäl ja kännis

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
         
         <div class="pages">
             <div class="panel" id="main" data-title="Main" data-selected="true">
-                This is main page
+                This is not a main page
             </div>
             <div class="panel" id="page2" data-title="Page 2">
                 This is Page 3
