--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
         
         <header>
             <a class="menuButton" data-left-menu="left" data-transition="cover" style="float:left"></a>
-            <h1>Title3</h1>
+            <img href="img/logo.png">
         </header>
         
         <div class="pages">
@@ -44,6 +44,9 @@
                 This is not a main page
             </div>
             <div class="panel" id="page2" data-title="Page 2">
+                This is Page 3
+            </div>
+            <div class="panel" id="page3" data-title="Page 2">
                 This is Page 3
             </div>
         </div>
