--- a/www/index.html
+++ b/www/index.html
@@ -36,12 +36,12 @@
         
         <header>
             <a class="menuButton" data-left-menu="left" data-transition="cover" style="float:left"></a>
-            <img href="img/logo.png">
+            <title>The Shift</title>
         </header>
         
         <div class="pages">
             <div class="panel" id="main" data-title="Main" data-selected="true">
-                This is not a main page
+                <img href="img/logo.png">
             </div>
             <div class="panel" id="page2" data-title="Page 2">
                 This is Page 3
