--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
         
         <div class="pages">
             <div class="panel" id="main" data-title="Main" data-selected="true">
-                <img href="img/logo.png">
+                <img href="img/logo.png" style="width: 200px;">
             </div>
             <div class="panel" id="page2" data-title="Page 2">
                 This is Page 3
