--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   * Please see the included README.md file for license terms and conditions.
   -->
 <head>
-    <title>Blank Cordova Mobile App Project Template (Lite)</title>
+    <title>The  Shift 2017 Official App</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 
     <!-- see http://webdesign.tutsplus.com/tutorials/htmlcss-tutorials/quick-tip-dont-forget-the-viewport-meta-tag -->
@@ -19,11 +19,29 @@
     <script src="cordova.js"></script>          <!-- phantom library, needed for Cordova api calls, added during build -->
     <script src="js/app.js"></script>           <!-- recommended location of your JavaScript code relative to other JS files -->
     <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/shift-styles.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
 </head>
 
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
+</nav>
 
-    <p>Hello, Cordova!</p>
+<p>Hello, Cordova!</p>
 
+
+
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.mobile-events.min.js"></script>
 </body>
 </html>
