--- a/www/index.html
+++ b/www/index.html
@@ -25,30 +25,68 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+<div class="wrapper">
+    <div id="menu">
+        <ul>
+            <li>
+                <i class="fa fa-calendar" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-microphone" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-map-o" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-info" aria-hidden="true"></i>
+            </li>
+        </ul>
+    </div>
+    <div id="content">
+        <div class="closeMenu" id="closeMenu"></div>
+        <nav class="navbar navbar-default">
+            <a id="openMenu" class="navbar-brand" href="#">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </a>
+        </nav>
+
+        <div class="container">
+            <p>Hello, Cordova!</p>
+            <p><input type="button" onclick="oauth2_login()" value="Oauth2 Login"></p>
+            <div id="logs"></div>
+            <div id="logs2"></div>
         </div>
     </div>
-</nav>
-<div class="container">
-    <p>Hello, Cordova!</p>
-
-    <p><input type="button" onclick="oauth2_login()" value="Oauth2 Login"></p>
-    <div id="logs"></div>
-    <div id="logs2"></div>
 </div>
-
 
 
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.mobile-events.min.js"></script>
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script type='application/javascript' src='js/fastclick.js'></script>
 <script>
+    $(function() {
+        FastClick.attach(document.body);
+    });
+    $('#openMenu').tapend(function(){
+        $('#menu').animate({left:'0px'});
+        $('#content').animate({left:'110px'});
+        $('#closeMenu').css('display','block');
+    });
+
+    $('.closeMenu').tapend(function(){
+        $('#menu').animate({left:'-110px'});
+        $('#content').animate({left:'0px'});
+        $(this).css('display', 'none');
+    });
+
+    $('.wrapper').swiperight(function(){
+        $('#menu').animate({left:'0px'});
+        $('#content').animate({left:'110px'});
+        $('#closeMenu').css('display','block');
+    });
+
     // template for new oauth2 service
     function oauth2_login() {
         $.oauth2({
