--- a/www/index.html
+++ b/www/index.html
@@ -29,10 +29,14 @@
     <div id="menu">
         <ul>
             <li>
-                <i class="fa fa-calendar" aria-hidden="true"></i>
+                <a href="index.html">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                </a>
             </li>
             <li>
-                <i class="fa fa-microphone" aria-hidden="true"></i>
+                <a href="speakers.html">
+                    <i class="fa fa-microphone" aria-hidden="true"></i>
+                </a>
             </li>
             <li>
                 <i class="fa fa-map-o" aria-hidden="true"></i>
@@ -56,7 +60,7 @@
             <!--<p><input type="button" onclick="oauth2_login()" value="Oauth2 Login"></p>
             <div id="logs"></div>
             <div id="logs2"></div>-->
-						<hr>
+            <hr>
 
 			<h4>Let's get to know each other</h4>
 			<input type="text" name="input" id="input" placeholder="Hello, my name is..."></input>
