Speaker introductions polished

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
         </ul>
     </div>
     <div id="content">
-	    <div class="swipeOpenMenu" id="swipeOpenMenu"></div>
+	    <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu"></div>
         <nav class="navbar navbar-default">
             <a id="openMenu" class="navbar-brand" href="#">
@@ -173,6 +173,5 @@
         });
     }
 </script>
-</head>
 </body>
 </html>
