--- a/www/speakers.html
+++ b/www/speakers.html
@@ -22,26 +22,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.mobile-events.min.js"></script>
-
-    <!--<link href='href="//fonts.googleapis.com/css?family=Raleway" />' rel='stylesheet' type='text/css'>-->
     <link href="css/carousel.css" rel="stylesheet">
-
-
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </a>
-        </div>
-    </div>
-</nav>
 <div class="wrapper">
     <div id="menu">
         <ul>
@@ -64,7 +47,7 @@
         </ul>
     </div>
     <div id="content">
-        <div class="swipeOpenMenu" id="swipeOpenMenu"></div>
+        <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
         <div class="closeMenu" id="closeMenu"></div>
         <nav class="navbar navbar-default">
             <a id="openMenu" class="navbar-brand" href="#">
@@ -75,50 +58,47 @@
         <div class="container">
             <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000000">
               <!-- Indicators -->
-              <ol class="carousel-indicators">
+              <!--<ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
-              </ol>
+              </ol>-->
 
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <div class="fill" style="background-image:url(img/speakers/speakerpic1.png);"></div>
-                        <a href="#fullintro" data-transition="slideup">
-                            <div data-role="main" id="shortintro">
-                                <div class="carousel-caption">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
+                    <div class="fill" style="background-image:url(img/speakers/dino.png);"></div>
+                    <a href="#fullintro" data-transition="slideup">
+                        <div data-role="main" id="shortintro">
+                            <div class="carousel-caption">
+                                <h3>#learning #mobile</h3>
+                                <p>#learning #mobile again and again</p>
                             </div>
-                        </a>
-
+                        </div>
+                    </a>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/speakerpic2.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/dino.png');"></div>
                     <div class="carousel-caption">
-
-                        <h3></h3>
-                        <p></p>
-
+                        <h3>#pöhinä #kupla</h3>
+                        <p>lorem ipsum</p>
                     </div>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/speakerpic1.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/dino.png');"></div>
                     <div class="carousel-caption">
-                        <h3>Speaker3</h3>
+                        <h3>#johnwayne #computers</h3>
                         <p>Speaker3 speaks about speaking on speakers.</p>
                     </div>
                 </div>
 
                 <div class="item">
-                  <div class="fill" style="background-image:url('img/speakers/speakerpic1.png');"></div>
+                  <div class="fill" style="background-image:url('img/speakers/dino.png');"></div>
                     <div class="carousel-caption">
-                        <h3>Speaker4</h3>
+                        <h3>#internet #google</h3>
                         <p>Speaker4 speaks about speaking on speakers.</p>
                     </div>
                 </div>
@@ -132,16 +112,6 @@
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
-                  <script>
-                    $(document).ready(function() {
-                        $("#myCarousel").swiperight(function() {
-                            $("#myCarousel").carousel('prev');
-                        });
-                        $("#myCarousel").swipeleft(function() {
-                            $("#myCarousel").carousel('next');
-                        });
-                      });
-                </script>
             </div>
         </div>
     </div>
@@ -151,10 +121,11 @@
 <script type="text/javascript" src="js/cordova.oauth2.js"></script>
 <script type='application/javascript' src='js/fastclick.js'></script>
 <script>
-
+    // SIDE MENU
 	$(function() {
         FastClick.attach(document.body);
     });
+
     $('#openMenu').tapend(function(){
         $('.wrapper').animate(
 			{left: '0'},
@@ -188,15 +159,26 @@
         $('#closeMenu').css('display','block');
     });
 */
-    $(document).ready(function() {
-        $("#myCarousel").swiperight(function() {
-            $("#myCarousel").carousel('prev');
-        });
-        $("#myCarousel").swipeleft(function() {
-            $("#myCarousel").carousel('next');
-        });
+    // SPEAKER INTRO CAROUSEL
+    $("#myCarousel").swiperight(function() {
+        $("#myCarousel").carousel('prev');
+    });
+    $("#myCarousel").swipeleft(function() {
+        $("#myCarousel").carousel('next');
+    });
+
+    $(".carousel-caption").tapend(function(){
+        $(this).animate({bottom:'0vh'},200);
+        $('.closeMenu').css('display','block');
+
       });
 
+    $('.closeMenu').on('tapend tapmove', function(){
+        $(".carousel-caption").animate({bottom:'-22vh'},200);
+        $(this).css('display','none');
+    })
+
+    // USER INFO
 	$('#send').on('tap', function(){
 		localStorage.userName = $('#input').val();
 		introductions();
@@ -216,7 +198,7 @@
 		}
 	}
 
-    // template for new oauth2 service
+    // LINKEDIN OAUTH2
     function oauth2_login() {
         $.oauth2({
             auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
@@ -247,7 +229,5 @@
         });
     }
 </script>
-</div>
-
 </body>
 </html>
