--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,11 @@
         <ul>
             <li>
                 <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="schedule.html">
                     <i class="fa fa-calendar" aria-hidden="true"></i>
                 </a>
             </li>
@@ -109,7 +114,7 @@
     $('.closeMenu').on('tapend tapmove', function(){
         $('.wrapper').animate(
 			{
-				left: '-7.2em',
+				left: '-15vw',
 			},
 			100,
 			"swing"
