--- a/www/schedule.html
+++ b/www/schedule.html
@@ -22,321 +22,168 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shift-styles.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.mobile-events.min.js"></script>
-
-    <link href='href="//fonts.googleapis.com/css?family=Raleway" />' rel='stylesheet' type='text/css'>
-
-
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="row">
-        <ul class="nav navbar-nav">
+<div class="wrapper">
+    <div id="menu">
+        <ul>
             <li>
-                <a href="#" class="col-xs-4">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
+                <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="col-xs-2">
-                <a href="#">
-                    <p>TUE</p>
-                    <p>15.06</p>
+            <li>
+                <a href="schedule.html">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="col-xs-2">
-                <a href="#">
-                    <p>WED</p>
-                    <p>15.06</p>
+            <li>
+                <a href="speakers.html">
+                    <i class="fa fa-microphone" aria-hidden="true"></i>
                 </a>
             </li>
-            <li class="col-xs-2">
-                <a href="#">
-                    <i class="fa fa-star-o fa-6" aria-hidden="true"></i>
-                </a>
+            <li>
+                <i class="fa fa-map-o" aria-hidden="true"></i>
             </li>
-            <li class="col-xs-2">
-                <a href="#">
-                    <i class="fa fa-list fa-6" aria-hidden="true"></i>
-                </a>
+            <li>
+                <i class="fa fa-info" aria-hidden="true"></i>
             </li>
         </ul>
-        </div>
-
     </div>
+    <div id="content">
+	    <!--<div class="swipeOpenMenu" id="swipeOpenMenu"></div>-->
+        <div class="closeMenu" id="closeMenu"></div>
+        <nav class="navbar navbar-default">
+            <a id="openMenu" class="navbar-brand" href="#">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </a>
+        </nav>
 
-</nav>
-
-<div class="container-fluid">
-<div class="row">
-<table>
-    <tr>
-        <th></th>
-        <th class="active">STAGE 1</th>
-        <th>STAGE 2</th>
-        <th>WORKSHOPS</th>
-    </tr>
-    <tr>
-        <td>10:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-        <tr>
-        <td>10:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>11:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>11:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>12:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>12:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>13:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>14:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>14:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>15:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>15:30</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-    <tr>
-        <td>16:00</td>
-        <td>
-            <h5 class="program">OLIVER RITTGEN</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name">The Future of Nordic <br>Life Sciences</p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">STEPHAN LAKE</h5>
-            <p class="time">10.15-11.15</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-        <td>
-            <h5 class="program">WORKSHOP</h5>
-            <p class="time">10.00-10.45</p>
-            <p class="name"></p>
-            <p><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </td>
-    </tr>
-
-</table>
-</div>
+        <div class="container">
+        </div>
+    </div>
 </div>
 
 
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.mobile-events.min.js"></script>
+<script type="text/javascript" src="js/cordova.oauth2.js"></script>
+<script type='application/javascript' src='js/fastclick.js'></script>
+<script>
+
+	$(function() {
+        FastClick.attach(document.body);
+    });
+
+    $(function(){
+        $.getJSON('schedule.json',function(data){
+            console.log(data.wednesday[0].schedule.length)
+            for(i = 0; i<data.wednesday.length; i++){
+                $('.container').append('<div><strong>' + data.wednesday[i].venue + '</strong></div>');
+                for(j = 0; j<data.wednesday[i].schedule.length; j++){
+                    $('.container').append(
+                        '<div>'+
+                        data.wednesday[i].schedule[j].name + ', ' +
+                        data.wednesday[i].schedule[j].company + '<br>' + data.wednesday[i].schedule[j].time
+                        + '</div>'
+                    );
+                };
+                $('.container').append('<hr>');
+            };
+
+            /*$.each(data.employees,function(i,emp){
+                $('ul').append('<li>'+emp.firstName+' '+emp.lastName+'</li>');
+            });*/
+        });
+    });
+
+
+
+    $('#openMenu').tapend(function(){
+        $('.wrapper').animate(
+			{left: '0'},
+			200,
+			"linear"
+		);
+        $('#closeMenu').css('display','block');
+    }).stop(true);
+	$('#swipeOpenMenu').tapmove(function(){
+        $('.wrapper').animate(
+			{left: '0'},
+			200,
+			"swing"
+		);
+        $('#closeMenu').css('display','block');
+    }).stop(true);
+
+    $('.closeMenu').on('tapend tapmove', function(){
+        $('.wrapper').animate(
+			{
+				left: '-15vw',
+			},
+			100,
+			"swing"
+		);
+        $(this).css('display', 'none');
+    }).stop(true);
+/*
+    $('#content').swiperight(function(){
+        $('.wrapper').animate({left:'0px'});
+        $('#closeMenu').css('display','block');
+    });
+*/
+
+	$('#send').on('tap', function(){
+		localStorage.userName = $('#input').val();
+		introductions();
+	});
+
+	$('#erase').on('tap', function(){
+		localStorage.removeItem('userName');
+	});
+
+	introductions();
+	function introductions (){
+		if(localStorage.userName != undefined){
+			$('#greetings').html('Welcome <strong>' +localStorage.userName +'</strong>!<br><br><a href="">Check out todays awesome <strong>schedule</strong></a>');
+
+		}else{
+			$('#greetings').html('You\'re new! Introduce yourself <strong><a href="">here</a></strong>');
+		}
+	}
+
+    // template for new oauth2 service
+    function oauth2_login() {
+        $.oauth2({
+            auth_url: 'https://www.linkedin.com/oauth/v2/authorization',           // required
+            response_type: 'code',      // required - "code"/"token"
+            token_url: 'https://www.linkedin.com/uas/oauth2/accessToken',          // required if response_type = 'code'
+            client_id: '78p3krb1oky5vx',          // required
+            client_secret: 'ptIkcf2REN9hSiEZ',      // required if response_type = 'code'
+            redirect_uri: 'http://localhost/',       // required - some dummy url
+            other_params: {scope: 'r_basicprofile', state: 'oujeeoujeeoujeea'}        // optional params object for scope, state, display...
+        }, function(token, response){
+            // do something with token or response
+            var authtoken = 'bearer'+token
+            $('#logs').html(token);
+            $.ajax({
+                url: "https://api.linkedin.com/v1/people/~?(:id)format=json?oauth_token="+token,
+                type: "GET",
+                Host: "api.linkedin.com",
+                Connection: "Keep-Alive",
+                Authorization: authtoken,
+                success: function(data) {
+                    $('#logs2').html(data);
+                }
+            });
+        }, function(error, response){
+            // do something with error object
+            $("#logs").append("<p class='error'><b>error: </b>"+JSON.stringify(error)+"</p>");
+            $("#logs").append("<p class='error'><b>response: </b>"+JSON.stringify(response)+"</p>");
+        });
+    }
+</script>
 </body>
 </html>
